# quant-research

./: .gitignore  README.md  meta-label-no-side.py  pyproject.toml
lib/: fair_value_gap.py  label.py  load_data.py  timeframe.py
qr_lib/: fair_value_gap.py  format.py  load_data.py
quant_research_lib/: fair_value_gap.py  timeframe.py
