[project]
name = "qr_lib"
version = "0.0.9"
authors = []
description = "Quant Research library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["qr_lib"]  # package names should match these glob patterns (["*"] by default)